--- a/sierra-firstinstall/other-kexts/kexts-to-boot/FakePCIID.kext/Contents/Info.plist
+++ b/sierra-firstinstall/other-kexts/kexts-to-boot/FakePCIID.kext/Contents/Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>16D32</string>
+	<string>16C67</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>AppleALC</string>
+	<string>FakePCIID</string>
 	<key>CFBundleIdentifier</key>
-	<string>as.vit9696.AppleALC</string>
+	<string>org.rehabman.driver.FakePCIID</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>AppleALC</string>
+	<string>FakePCIID</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1.0</string>
+	<string>1.3.6</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,7 +25,7 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.1.0</string>
+	<string>1.3.6</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -33,51 +33,33 @@
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>16C58</string>
+	<string>10M2518</string>
 	<key>DTSDKName</key>
-	<string>macosx10.12</string>
+	<string>macosx10.6</string>
 	<key>DTXcode</key>
 	<string>0821</string>
 	<key>DTXcodeBuild</key>
 	<string>8C1002</string>
-	<key>IOKitPersonalities</key>
-	<dict>
-		<key>as.vit9696.AppleALC</key>
-		<dict>
-			<key>CFBundleIdentifier</key>
-			<string>as.vit9696.AppleALC</string>
-			<key>IOClass</key>
-			<string>AppleALC</string>
-			<key>IOMatchCategory</key>
-			<string>AppleALC</string>
-			<key>IOProviderClass</key>
-			<string>IOResources</string>
-			<key>IOResourceMatch</key>
-			<string>IOKit</string>
-		</dict>
-	</dict>
-	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2017 vit9696. All rights reserved.</string>
+	<key>OSBundleCompatibleVersion</key>
+	<string>1.3.6</string>
 	<key>OSBundleLibraries</key>
 	<dict>
-		<key>as.vit9696.Lilu</key>
-		<string>1.0.0</string>
-		<key>as.vit9696.PinConfigs</key>
-		<string>1.0.0</string>
+		<key>com.apple.iokit.IOPCIFamily</key>
+		<string>1.0.0b1</string>
 		<key>com.apple.kpi.bsd</key>
-		<string>12.0.0</string>
-		<key>com.apple.kpi.dsep</key>
-		<string>12.0.0</string>
+		<string>8.0.0</string>
 		<key>com.apple.kpi.iokit</key>
-		<string>12.0.0</string>
+		<string>8.0.0</string>
 		<key>com.apple.kpi.libkern</key>
-		<string>12.0.0</string>
+		<string>8.0.0</string>
 		<key>com.apple.kpi.mach</key>
-		<string>12.0.0</string>
+		<string>8.0.0</string>
 		<key>com.apple.kpi.unsupported</key>
-		<string>12.0.0</string>
+		<string>8.0.0</string>
 	</dict>
 	<key>OSBundleRequired</key>
 	<string>Root</string>
+	<key>Source Code</key>
+	<string>https://github.com/RehabMan/FakePCIID</string>
 </dict>
 </plist>
