--- a/sierra-firstinstall/other-kexts/kexts-to-boot/FakeSMC.kext/Contents/Info.plist
+++ b/sierra-firstinstall/other-kexts/kexts-to-boot/FakeSMC.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>15G1004</string>
+	<string>16E195</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>6.21-311-g2958f55.1723</string>
+	<string>6.25-332-gf3a8525c.1758</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,11 +25,11 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1723</string>
+	<string>1758</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>7D175</string>
+	<string>8E1000a</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
@@ -37,9 +37,9 @@
 	<key>DTSDKName</key>
 	<string>macosx10.8</string>
 	<key>DTXcode</key>
-	<string>0730</string>
+	<string>0831</string>
 	<key>DTXcodeBuild</key>
-	<string>7D175</string>
+	<string>8E1000a</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>FakeSMC</key>
@@ -237,9 +237,9 @@
 			<key>IOResourceMatch</key>
 			<string>FakeSMCKeyStore</string>
 			<key>RM,Build</key>
-			<string>Release-RehabMan</string>
+			<string>Release-rehabman</string>
 			<key>RM,Version</key>
-			<string>FakeSMC 1723</string>
+			<string>FakeSMC 1758</string>
 		</dict>
 		<key>FakeSMCKeyStore</key>
 		<dict>
@@ -258,9 +258,9 @@
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2015 netkas. All rights reserved.</string>
+	<string>Copyright © 2017 netkas. All rights reserved.</string>
 	<key>OSBundleCompatibleVersion</key>
-	<string>1212</string>
+	<string>1429</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>com.apple.iokit.IOACPIFamily</key>
